se crearon estilos para index

--- a/blog.html
+++ b/blog.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <h1>
-        Blog para git 
+        Blog para curso de git  
     </h1>
+    <p>
+        Parrafo para demostracion de algo
+    </p>
 </body>
 </html>
