--- a/blog.html
+++ b/blog.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
-    <h1>
-        Blog para curso de git  
-    </h1>
-    <p>
-        Parrafo para demostracion de algo
-    </p>
-</body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div id="post">
+        <h1>Blog para curso de git</h1>
+        <p>Parrafo para demostracion de algo</p>
+      </div>
+    </div>
+  </body>
 </html>
