--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="container">
+        <div id="cabecera ">
+            esta es la cabecera 
+        </div>
       <div id="post">
         <h1>Blog para curso de git</h1>
         <p>Parrafo para demostracion de algo</p>
