finalizada la cabecera con estilos

--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div id="container">
-        <div id="cabecera ">
-            esta es la cabecera 
+        <div id="cabecera">
+            cabecera
+            <span id="tagline">
+                descripcion cabecera 
+            </span> 
         </div>
       <div id="post">
         <h1>Blog para curso de git</h1>
