se agrego nueva descripccion y se cambio el stilo de de las letras

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
       <div id="post">
         <h1>Blog para curso de git</h1>
         <p>Parrafo para demostracion de algo</p>
+        <p>otro parrafo para demostracion de algo</p>
       </div>
     </div>
   </body>
