cambio de version

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             cabecera
             <span id="tagline">
-                descripcion cabecera 
+                descripcion cabecera  2.0
             </span> 
         </div>
       <div id="post">
