cambios desde otra cuenta

--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
         <h1>Blog para curso de git</h1>
         <p>Parrafo para demostracion de algo</p>
         <p>otro parrafo para demostracion de algo</p>
+        <p>otro parrafo para otro cambio</p>
       </div>
     </div>
   </body>
